--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
-language: node_js
-node_js:
-- "stable"
-
+language: bash
+before_script:
+- cd jsonnet/
+- git clone --depth 1 https://github.com/grafana/grafonnet-lib.git templates/grafonnet-lib
 script:
-- jsonnet/make
+- make
